# X_WebServer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
Assets/: Arguments.md  Build.md  Commands.md  Docs.md
WebServer/: CMakeLists.txt
WebServer/RequestHandlePlugin/: CMakeLists.txt
WebServer/RequestHandlePlugin/src/: main.cpp
WebServer/RequestHandlePlugin/src/Http/: Http.cpp  Http.h
WebServer/Utils/: CMakeLists.txt
WebServer/Utils/XPlatform.Utils/Application/: Application.h
WebServer/certs/: cert.pem  key.pem
WebServer/configs/: project.json
WebServer/src/: main.cpp
WebServer/src/WebServerApplication/: WebServerApplication.cpp  WebServerApplication.h
XPlatform/: CMakeLists.txt
